@@ -6,6 +6,8 @@ copyright_holder = Buddy Burden
 version = 0.01
 [@BAREFOOT]
 
+[ExtraTests]
+
 [Prereqs]
 Time::Piece = 1.30
 Date::Parse = 1.17
